@startuml
package bombs {
    class Bomb {
        - {static} logger LOGGER
        - SpriteStore SPRITESTORE
        - long delai
        - long startTime
        + Bomb(BombermanGame game, double xPosition, double yPosition, Sprite sprite, long delai)
        + void poseBombe()
        + boolean move(long delta)
        + void collidedWith(IMovable other)
        + void explode()
        + void hitEnemy()
        + boolean isEnemy()
        + boolean isPlayer()
        + boolean isExplosion()
        + boolean isEnemyWithLife()
        + boolean isLava()
        + boolean isBomb()
        + boolean isFakeBomb()
        + boolean isBigBomb()
        + boolean isInvisibleBonus()
        + boolean isLifeBonus()
        + boolean isBombBonus()
        + boolean equals(Object o)
        + int hashCode()
    }

    class BigBomb {
        + BigBomb(BombermanGame game, double xPosition, double yPosition, Sprite sprite, long delai)
    }

    class FakeBomb {
        - long delai
        - long startTime
        + FakeBomb(BombermanGame game, double xPosition, double yPosition, Sprite sprite, long delai)
        + void poseBombe()
        + boolean move(long delta)
        + void collidedWith(IMovable other)
        + void explode()
        + void hitEnemy()
        + boolean isEnemy()
        + boolean isPlayer()
        + boolean isExplosion()
        + boolean isEnemyWithLife()
        + boolean isLava()
        + boolean isBomb()
        + boolean isFakeBomb()
        + boolean isBigBomb()
        + boolean isInvisibleBonus()
        + boolean isLifeBonus()
        + boolean isBombBonus()
        + boolean equals(Object o)
        + int hashCode()
    }

    interface IBomb {
        + void poseBombe()
        + void explode()
    }

    class AbstractMovable {

    }

    interface IMovable {

    }
}

Bomb ..|> IBomb
BigBomb ..|> IBomb
FakeBomb ..|> IBomb
FakeBomb --|> AbstractMovable
BigBomb --|> AbstractMovable
Bomb --|> AbstractMovable
AbstractMovable ..|> IMovable

@enduml